// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Console empty renders as expected 1`] = `
<div
  className="Console"
>
  <Line
    classes={
      Object {
        "content": "Console-Line-content",
        "element": "Console-Line",
      }
    }
    content=""
    cursor={
      Object {
        "classes": Object {
          "blink": "Console-Cursor--blink",
          "element": "Console-Cursor",
          "write": "Console-Cursor--write",
        },
        "intervalMs": 400,
      }
    }
    ps1={
      Object {
        "classes": Object {
          "element": "Console-PS1",
        },
        "content": "$",
      }
    }
    write={true}
  />
</div>
`;

exports[`Console writing array of strings first line after some time after the whole line has been written renders as expected 1`] = `
<Console
  lines={
    Array [
      "test line.",
      "another line.",
    ]
  }
  onFinishWritingLine={[MockFunction]}
  onFinishWritingLines={[MockFunction]}
>
  <div
    className="Console"
  >
    <Line
      classes={
        Object {
          "content": "Console-Line-content",
          "element": "Console-Line",
        }
      }
      content="test line."
      cursor={
        Object {
          "char": ".",
          "classes": Object {
            "blink": "Console-Cursor--blink",
            "element": "Console-Cursor",
            "write": "Console-Cursor--write",
          },
          "intervalMs": 400,
        }
      }
      ps1={
        Object {
          "classes": Object {
            "element": "Console-PS1",
          },
          "content": "$",
        }
      }
      write={true}
    >
      <pre
        className="Console-Line"
      >
        <PS1
          classes={
            Object {
              "element": "Console-PS1",
            }
          }
          content="$"
        >
          <span
            className="Console-PS1"
          >
            $
          </span>
        </PS1>
        <span
          className="Console-Line-content"
        >
          test line.
        </span>
        <Cursor
          char="."
          classes={
            Object {
              "blink": "Console-Cursor--blink",
              "element": "Console-Cursor",
              "write": "Console-Cursor--write",
            }
          }
          intervalMs={400}
        >
          <span
            className="Console-Cursor Console-Cursor--write"
          >
            .
          </span>
        </Cursor>
      </pre>
    </Line>
  </div>
</Console>
`;

exports[`Console writing array of strings first line after some time after the whole line has been written second line after some time after the whole second line has been written renders as expected 1`] = `
<Console
  lines={
    Array [
      "test line.",
      "another line.",
    ]
  }
  onFinishWritingLine={
    [MockFunction] {
      "calls": Array [
        Array [
          "test line.",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onFinishWritingLines={[MockFunction]}
>
  <div
    className="Console"
  >
    <Line
      classes={
        Object {
          "content": "Console-Line-content",
          "element": "Console-Line",
        }
      }
      content="another line."
      cursor={
        Object {
          "char": ".",
          "classes": Object {
            "blink": "Console-Cursor--blink",
            "element": "Console-Cursor",
            "write": "Console-Cursor--write",
          },
          "intervalMs": 400,
        }
      }
      ps1={
        Object {
          "classes": Object {
            "element": "Console-PS1",
          },
          "content": "$",
        }
      }
      write={true}
    >
      <pre
        className="Console-Line"
      >
        <PS1
          classes={
            Object {
              "element": "Console-PS1",
            }
          }
          content="$"
        >
          <span
            className="Console-PS1"
          >
            $
          </span>
        </PS1>
        <span
          className="Console-Line-content"
        >
          another line.
        </span>
        <Cursor
          char="."
          classes={
            Object {
              "blink": "Console-Cursor--blink",
              "element": "Console-Cursor",
              "write": "Console-Cursor--write",
            }
          }
          intervalMs={400}
        >
          <span
            className="Console-Cursor Console-Cursor--write"
          >
            .
          </span>
        </Cursor>
      </pre>
    </Line>
  </div>
</Console>
`;

exports[`Console writing array of strings first line after some time after the whole line has been written second line after some time renders as expected 1`] = `
<Console
  lines={
    Array [
      "test line.",
      "another line.",
    ]
  }
  onFinishWritingLine={
    [MockFunction] {
      "calls": Array [
        Array [
          "test line.",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onFinishWritingLines={[MockFunction]}
>
  <div
    className="Console"
  >
    <Line
      classes={
        Object {
          "content": "Console-Line-content",
          "element": "Console-Line",
        }
      }
      content="an"
      cursor={
        Object {
          "char": "n",
          "classes": Object {
            "blink": "Console-Cursor--blink",
            "element": "Console-Cursor",
            "write": "Console-Cursor--write",
          },
          "intervalMs": 400,
        }
      }
      ps1={
        Object {
          "classes": Object {
            "element": "Console-PS1",
          },
          "content": "$",
        }
      }
      write={true}
    >
      <pre
        className="Console-Line"
      >
        <PS1
          classes={
            Object {
              "element": "Console-PS1",
            }
          }
          content="$"
        >
          <span
            className="Console-PS1"
          >
            $
          </span>
        </PS1>
        <span
          className="Console-Line-content"
        >
          an
        </span>
        <Cursor
          char="n"
          classes={
            Object {
              "blink": "Console-Cursor--blink",
              "element": "Console-Cursor",
              "write": "Console-Cursor--write",
            }
          }
          intervalMs={400}
        >
          <span
            className="Console-Cursor Console-Cursor--write"
          >
            n
          </span>
        </Cursor>
      </pre>
    </Line>
  </div>
</Console>
`;

exports[`Console writing array of strings first line after some time after the whole line has been written second line renders as expected 1`] = `
<Console
  lines={
    Array [
      "test line.",
      "another line.",
    ]
  }
  onFinishWritingLine={
    [MockFunction] {
      "calls": Array [
        Array [
          "test line.",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onFinishWritingLines={[MockFunction]}
>
  <div
    className="Console"
  >
    <Line
      classes={
        Object {
          "content": "Console-Line-content",
          "element": "Console-Line",
        }
      }
      content="a"
      cursor={
        Object {
          "char": "a",
          "classes": Object {
            "blink": "Console-Cursor--blink",
            "element": "Console-Cursor",
            "write": "Console-Cursor--write",
          },
          "intervalMs": 400,
        }
      }
      ps1={
        Object {
          "classes": Object {
            "element": "Console-PS1",
          },
          "content": "$",
        }
      }
      write={true}
    >
      <pre
        className="Console-Line"
      >
        <PS1
          classes={
            Object {
              "element": "Console-PS1",
            }
          }
          content="$"
        >
          <span
            className="Console-PS1"
          >
            $
          </span>
        </PS1>
        <span
          className="Console-Line-content"
        >
          a
        </span>
        <Cursor
          char="a"
          classes={
            Object {
              "blink": "Console-Cursor--blink",
              "element": "Console-Cursor",
              "write": "Console-Cursor--write",
            }
          }
          intervalMs={400}
        >
          <span
            className="Console-Cursor Console-Cursor--write"
          >
            a
          </span>
        </Cursor>
      </pre>
    </Line>
  </div>
</Console>
`;

exports[`Console writing array of strings first line after some time renders as expected 1`] = `
<Console
  lines={
    Array [
      "test line.",
      "another line.",
    ]
  }
  onFinishWritingLine={[MockFunction]}
  onFinishWritingLines={[MockFunction]}
>
  <div
    className="Console"
  >
    <Line
      classes={
        Object {
          "content": "Console-Line-content",
          "element": "Console-Line",
        }
      }
      content="te"
      cursor={
        Object {
          "char": "e",
          "classes": Object {
            "blink": "Console-Cursor--blink",
            "element": "Console-Cursor",
            "write": "Console-Cursor--write",
          },
          "intervalMs": 400,
        }
      }
      ps1={
        Object {
          "classes": Object {
            "element": "Console-PS1",
          },
          "content": "$",
        }
      }
      write={true}
    >
      <pre
        className="Console-Line"
      >
        <PS1
          classes={
            Object {
              "element": "Console-PS1",
            }
          }
          content="$"
        >
          <span
            className="Console-PS1"
          >
            $
          </span>
        </PS1>
        <span
          className="Console-Line-content"
        >
          te
        </span>
        <Cursor
          char="e"
          classes={
            Object {
              "blink": "Console-Cursor--blink",
              "element": "Console-Cursor",
              "write": "Console-Cursor--write",
            }
          }
          intervalMs={400}
        >
          <span
            className="Console-Cursor Console-Cursor--write"
          >
            e
          </span>
        </Cursor>
      </pre>
    </Line>
  </div>
</Console>
`;

exports[`Console writing array of strings first line renders as expected 1`] = `
<Console
  lines={
    Array [
      "test line.",
      "another line.",
    ]
  }
  onFinishWritingLine={[MockFunction]}
  onFinishWritingLines={[MockFunction]}
>
  <div
    className="Console"
  >
    <Line
      classes={
        Object {
          "content": "Console-Line-content",
          "element": "Console-Line",
        }
      }
      content="t"
      cursor={
        Object {
          "char": "t",
          "classes": Object {
            "blink": "Console-Cursor--blink",
            "element": "Console-Cursor",
            "write": "Console-Cursor--write",
          },
          "intervalMs": 400,
        }
      }
      ps1={
        Object {
          "classes": Object {
            "element": "Console-PS1",
          },
          "content": "$",
        }
      }
      write={true}
    >
      <pre
        className="Console-Line"
      >
        <PS1
          classes={
            Object {
              "element": "Console-PS1",
            }
          }
          content="$"
        >
          <span
            className="Console-PS1"
          >
            $
          </span>
        </PS1>
        <span
          className="Console-Line-content"
        >
          t
        </span>
        <Cursor
          char="t"
          classes={
            Object {
              "blink": "Console-Cursor--blink",
              "element": "Console-Cursor",
              "write": "Console-Cursor--write",
            }
          }
          intervalMs={400}
        >
          <span
            className="Console-Cursor Console-Cursor--write"
          >
            t
          </span>
        </Cursor>
      </pre>
    </Line>
  </div>
</Console>
`;

exports[`Console writing string after some time after the whole line has been written renders as expected 1`] = `
<Console
  lines="test line."
  onFinishWritingLine={[MockFunction]}
  onFinishWritingLines={[MockFunction]}
>
  <div
    className="Console"
  >
    <Line
      classes={
        Object {
          "content": "Console-Line-content",
          "element": "Console-Line",
        }
      }
      content="test line."
      cursor={
        Object {
          "char": ".",
          "classes": Object {
            "blink": "Console-Cursor--blink",
            "element": "Console-Cursor",
            "write": "Console-Cursor--write",
          },
          "intervalMs": 400,
        }
      }
      ps1={
        Object {
          "classes": Object {
            "element": "Console-PS1",
          },
          "content": "$",
        }
      }
      write={true}
    >
      <pre
        className="Console-Line"
      >
        <PS1
          classes={
            Object {
              "element": "Console-PS1",
            }
          }
          content="$"
        >
          <span
            className="Console-PS1"
          >
            $
          </span>
        </PS1>
        <span
          className="Console-Line-content"
        >
          test line.
        </span>
        <Cursor
          char="."
          classes={
            Object {
              "blink": "Console-Cursor--blink",
              "element": "Console-Cursor",
              "write": "Console-Cursor--write",
            }
          }
          intervalMs={400}
        >
          <span
            className="Console-Cursor Console-Cursor--write"
          >
            .
          </span>
        </Cursor>
      </pre>
    </Line>
  </div>
</Console>
`;

exports[`Console writing string after some time renders as expected 1`] = `
<Console
  lines="test line."
  onFinishWritingLine={[MockFunction]}
  onFinishWritingLines={[MockFunction]}
>
  <div
    className="Console"
  >
    <Line
      classes={
        Object {
          "content": "Console-Line-content",
          "element": "Console-Line",
        }
      }
      content="te"
      cursor={
        Object {
          "char": "e",
          "classes": Object {
            "blink": "Console-Cursor--blink",
            "element": "Console-Cursor",
            "write": "Console-Cursor--write",
          },
          "intervalMs": 400,
        }
      }
      ps1={
        Object {
          "classes": Object {
            "element": "Console-PS1",
          },
          "content": "$",
        }
      }
      write={true}
    >
      <pre
        className="Console-Line"
      >
        <PS1
          classes={
            Object {
              "element": "Console-PS1",
            }
          }
          content="$"
        >
          <span
            className="Console-PS1"
          >
            $
          </span>
        </PS1>
        <span
          className="Console-Line-content"
        >
          te
        </span>
        <Cursor
          char="e"
          classes={
            Object {
              "blink": "Console-Cursor--blink",
              "element": "Console-Cursor",
              "write": "Console-Cursor--write",
            }
          }
          intervalMs={400}
        >
          <span
            className="Console-Cursor Console-Cursor--write"
          >
            e
          </span>
        </Cursor>
      </pre>
    </Line>
  </div>
</Console>
`;

exports[`Console writing string renders as expected 1`] = `
<Console
  lines="test line."
  onFinishWritingLine={[MockFunction]}
  onFinishWritingLines={[MockFunction]}
>
  <div
    className="Console"
  >
    <Line
      classes={
        Object {
          "content": "Console-Line-content",
          "element": "Console-Line",
        }
      }
      content="t"
      cursor={
        Object {
          "char": "t",
          "classes": Object {
            "blink": "Console-Cursor--blink",
            "element": "Console-Cursor",
            "write": "Console-Cursor--write",
          },
          "intervalMs": 400,
        }
      }
      ps1={
        Object {
          "classes": Object {
            "element": "Console-PS1",
          },
          "content": "$",
        }
      }
      write={true}
    >
      <pre
        className="Console-Line"
      >
        <PS1
          classes={
            Object {
              "element": "Console-PS1",
            }
          }
          content="$"
        >
          <span
            className="Console-PS1"
          >
            $
          </span>
        </PS1>
        <span
          className="Console-Line-content"
        >
          t
        </span>
        <Cursor
          char="t"
          classes={
            Object {
              "blink": "Console-Cursor--blink",
              "element": "Console-Cursor",
              "write": "Console-Cursor--write",
            }
          }
          intervalMs={400}
        >
          <span
            className="Console-Cursor Console-Cursor--write"
          >
            t
          </span>
        </Cursor>
      </pre>
    </Line>
  </div>
</Console>
`;
